ncc/testsuite/negative/try-empty-catch.n
class M {
  static f () : void {
    try {
      _ = 1
    } catch { // E: catch body must have at least one handler
    }
  }
}
